# CMakeList.txt : CMake project for KaliDiscordBot4, include source and define
# project specific logic here.
#
cmake_minimum_required (VERSION 3.8)

# Add source to this project's executable.
add_executable (KaliDiscordBot4 "KaliDiscordBot4.cpp" "KaliDiscordBot4.h")

# TODO: Add tests and install targets if needed.
